implement trasactions for state objects
